fixed alignment of yui color picker

--- a/templates/default/delos.less
+++ b/templates/default/delos.less
@@ -1945,6 +1945,16 @@ div.ilGoogleMap {
      }
 }
 
+.yui-skin-sam {
+	&.form-inline .form-control {
+		vertical-align: top;
+	}
+	.yui-button button {
+		line-height: 23px;
+		min-height: 23px;
+	}
+
+}
 /* basic responsiveness (beta)
 	no more specific section. no more delos_sm.less data (treated as bug)
 	"Responsive" code has to be inserted like:
